--- a/PS1.ipynb
+++ b/PS1.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Problem Set 1 MSYS30\n",
     "\n",
-    "Using the lessons on search and recursion, answer the ff guide questions using code and comments for your remarks:"
+    "Using the lessons on search and recursion, answer the ff guide questions using code and comments for your remarks. You may work in at most pairs. Submission details to be posted via Discord.\n",
+    "\n",
+    "Feel free to ask any questions re: the mechanics of the PSet."
    ]
   },
   {
