--- a/PS1.ipynb
+++ b/PS1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Problem Set 1 MSYS30\n",
     "\n",
-    "Using the lessons on search and recursion, answer the ff guide questions using code and comments for your remarks. You may work in at most pairs. Submit the problem set via .ipynb file with your pair's surnames (bautista_santos_pset1.ipynb) via email at fbautista@aten\n",
+    "Using the lessons on search and recursion, answer the ff guide questions using code and comments for your remarks. You may work in at most pairs. Submit the problem set via **.ipynb** file with your pair's surnames **(bautista_santos_pset1.ipynb)** via email at **fbautista@ateneo.edu** on or before **Wed 23 December 11:59PM**.\n",
     "\n",
     "Feel free to ask any questions re: the mechanics of the PSet."
    ]
